SphereSim 2.4.4:
* Added Array class and modified TwoDimArray to use the new class. No speed change.
* Switched from QVector to custom Array class. Nearly no speed improve.
* Improved code formatting.
* Added flags to switch between STL, Qt and custom array class in Server.
* Added automatic version number to Viewer title.
* Improved array handling in Server.

SphereSim 2.4.3:
* Improved simulated systems and Benchmark client.
* Improved simulated systems again.
* Improved simulation calculations; big error decrease.
* Added methods to control step division in calculations.
* Improved simulated systems.
* Improved Gnuplot script to output PDF files.
* Switched to .zip extension for mingw-w64 package.
* Improved output of SystemCreator class.
* Added new simulated system to SimulationGrapher.
* Added methods to measure step calculation time.
* Added StartDialog to Viewer client.
* Minor fix in the Gnuplot script.
* Improved PKGBUILDs.
* Fixed some initialized variables.
* Improved PKGBUILDs.
* Small PKGBUILD fix: added Git as dependency.

SphereSim 2.4.2:
* Improved simulated system.
* Improved PKGBUILD build flags.
* Improved MainWindow to handle selected simulated system correctly.
* Added new simulated system, as a benchmark as well.

SphereSim 2.4.1:
* Improved simulated systems in Viewer and Grapher.
* Added periodic boundary conditions; currently works with pairwise forces only.
* Added buttons to Viewer and methods to control kinetic energy of the system.
* Added SystemCreator class to provide common systems for all clients.
* Improved SystemCreator and SimulationGrapher to produce good speed distributions.
* Added methods to target a specific system temperature.
* Improved simulated system: atom speeds are Maxwell-Boltzmann distributed.
* Added methods to control periodic boundary conditions.
* Activated 3 dimensional simulated system.

SphereSim 2.4.0:
* Added methods to control and calculate Lennard-Jones potentials and forces.