@@ -54,4 +54,12 @@ cd $CURDIR
 rm -rf $DIR
 if [ "$?" != "0" ]; then error "rm failed! Aborting."; exit; fi
 
-msg "Finished! Tarball is located under '$CURDIR/$TARBALL_BASE'"
+msg "Tarball is located under '$CURDIR/$TARBALL_BASE'"
+
+msg "Uploading tarball..."
+curl --noproxy '*' --form project=SphereSim --form token=cJZrLvknfeviUpTOaFgEFw --form email=max.mail@dameweb.de \
+	--form file=@"$CURDIR/$TARBALL_BASE" --form version="$(cat $CURDIR/VERSION)" \
+	--form description="$(cat $CURDIR/VERSION) build" http://scan5.coverity.com/cgi-bin/upload.py
+if [ "$?" != "0" ]; then error "curl failed! Aborting."; exit; fi
+
+msg "Finished! Tarball was uploaded."
